--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -18,13 +18,13 @@ jobs:
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install pytest
+        cd api_yamdb/
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
         python -m pytest
-        cd infra_project/
         python manage.py test
         
   build_and_push_to_docker_hub:
