--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -4,11 +4,12 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - data_value:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
     image: alexandrbatanov/api_yamdb:latest
+    build: ../api_yamdb/
     restart: always
     volumes:
       - static_value:/app/static/
@@ -29,5 +30,6 @@ services:
     depends_on:
       - web
 volumes:
+  data_value:
   static_value:
   media_value:
