--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,8 +9,10 @@ services:
       - ./.env
   web:
     image: alexandrbatanov/api_yamdb:latest
-    build: ../api_yamdb/
     restart: always
+    command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
+    ports:
+      - 8000:8000
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
