--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -10,7 +10,7 @@ importlib-metadata==4.11.3
 iniconfig==1.1.1
 packaging==21.3
 pluggy==0.13.1
-psycopg2-binary
+psycopg2-binary==2.8.1
 py==1.11.0
 PyJWT==2.1.0
 pyparsing==3.0.7
