--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,14 +1,21 @@
 version: '3.8'
 
+volumes:
+  static_value:
+  media_value:
+
 services:
   db:
     image: postgres:13.0-alpine
+    restart: always
     volumes:
-      - data_value:/var/lib/postgresql/data/
+      - /app/lib/postgresql/data/
     env_file:
       - ./.env
   web:
     image: alexandrbatanov/api_yamdb:latest
+    build: ../api_yamdb/
+    image: alexandrbatanov/yamdb_final
     restart: always
     command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
     ports:
@@ -22,16 +29,12 @@ services:
       - ./.env
   nginx:
     image: nginx:1.21.3-alpine
+    restart: always
     ports:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
-
+      - static_value:/app/html/static/
+      - media_value:/app/html/media/
     depends_on:
       - web
-volumes:
-  data_value:
-  static_value:
-  media_value:
