--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,22 +4,18 @@ server {
 
     server_name 127.0.0.1;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-
-    http {
-        server_tokens off;
-        proxy_hide_header X-Powered-By;
-    }
-
     location /static/ {
-        root /var/html/;
+        root /app/html/;
     }
 
     location /media/ {
-        root /var/html/;
+        root /app/html/;
     }
 
     location / {
+        proxy_set_header Host $host;
         proxy_pass http://web:8000;
     }
+    
+    server_tokens off;
 }
