--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m flake8
         python -m pytest
-        cd infra_project/
+        cd api_yamdb/
         python manage.py test
         
   build_and_push_to_docker_hub:
