--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,11 +9,10 @@ services:
     image: postgres:13.0-alpine
     restart: always
     volumes:
-      - /app/lib/postgresql/data/
+      - /var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
-    image: alexandrbatanov/api_yamdb:latest
     build: ../api_yamdb/
     image: alexandrbatanov/yamdb_final
     restart: always
@@ -21,8 +20,8 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/var/static/
+      - media_value:/var/media/
     depends_on:
       - db
     env_file:
@@ -34,7 +33,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/app/html/static/
-      - media_value:/app/html/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - web
