--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -5,11 +5,11 @@ server {
     server_name 127.0.0.1;
 
     location /static/ {
-        root /app/html/;
+        root /var/html/;
     }
 
     location /media/ {
-        root /app/html/;
+        root /var/html/;
     }
 
     location / {
