--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -18,10 +18,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install -r requirements.txt
-      - name: Test with flake8 and django tests
-        run: |
-          flake8
-	  pytest
+      - name: Test flake8
+        run: flake8
+      - name: Test django
+	run: pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
