--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -50,20 +50,16 @@ jobs:
           tags: alexandrbatanov/yamdb_final:latest
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
     steps:
-      - uses: actions/checkout@v2
-      - name: Copy file via ssh password
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          source: "./.env, nginx/default.conf, ./docker-compose.yaml"
-          target: "/home/yc-user/app"
-
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        source: "./.env, nginx/default.conf, ./docker-compose.yaml"
+        target: "/home/yc-user/app"
 
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
