--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -67,6 +67,8 @@ jobs:
             sudo docker-compose down
             sudo docker pull mydockerid2505/yamdb_final:latest
             sudo docker-compose up -d
+            sudo docker-compose exec web python manage.py migrate
+            sudo docker-compose exec web python manage.py collectstatic --no-input
 
 
   send_message:
