--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -18,8 +18,8 @@ services:
     image: alexandrbatanov/yamdb_final:latest
     restart: always
     volumes:
-      - static_volume:/app/static/
-      - media_volume:/app/media/
+      - static_volume:/static/
+      - media_volume:/media/
     depends_on:
       - db
     env_file:
