--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -15,11 +15,12 @@ services:
     env_file:
       - ./.env
   yamdb:
-    image: alexandrbatanov/yamdb_final:latest
+    #image: alexandrbatanov/yamdb_final:latest
+    build: .
     restart: always
     volumes:
-      - static_volume:/static/
-      - media_volume:/media/
+      - static_volume:/app/static/
+      - media_volume:/app/media/
     depends_on:
       - db
     env_file:
