--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -63,7 +63,7 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
-            sudo docker-compose pull
+            sudo docker-compose pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
@@ -72,6 +72,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} > .env
             echo DB_HOST=${{ secrets.DB_HOST }} > .env
             echo DB_PORT=${{ secrets.DB_PORT }} > .env
+            echo SEKRET_KEY=${{ secrets.SEKRET_KEY }} > .env
             sudo docker-compose up -d
 
 
