--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -65,12 +65,12 @@ jobs:
             sudo docker-compose rm web
             sudo docker-compose pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
             touch .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} > .env
-            echo DB_NAME=${{ secrets.DB_NAME }} > .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} > .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} > .env
-            echo DB_HOST=${{ secrets.DB_HOST }} > .env
-            echo DB_PORT=${{ secrets.DB_PORT }} > .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
 
 
