--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,6 +32,7 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref_name == 'master'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -64,6 +65,7 @@ jobs:
             sudo docker-compose stop
             sudo docker-compose rm web
             sudo docker-compose pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+            rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -71,6 +73,8 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo SEKRET_KEY=${{ secrets.SEKRET_KEY }} >> .env
+            echo HOST=${{ secrets.HOST }} >> .env
             sudo docker-compose up -d
 
 
