--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.7-slim
 
 WORKDIR /app
 
+COPY requirements.txt .
+
+RUN pip3 install -r requirements.txt --no-cache-dir
+
 COPY . .
 
 RUN pip3 install -r /app/requirements.txt --no-cache-dir
