--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -6,8 +6,6 @@ COPY api_yamdb/requirements.txt ./
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
-COPY . .
-
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
+COPY api_yamdb/ ./
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
